[package]
name = "malloc_demo"
version = "0.1.0"
authors = ["Yukang <moorekang@gmail.com>"]
edition = "2018"

[features]
mem-profiling = ["jemallocator/profiling"]
mem-debug = ["jemalloc-sys/debug"]

[dependencies]
jemallocator = "0.1.7"
jemalloc-sys = "0.1.7"
jemalloc-ctl = "0.2.0"


# [features]
# default = ["jemalloc"]
# jemalloc = ["jemallocator", "jemalloc-sys", "jemalloc-ctl"]
# mem-profiling = ["jemallocator/profiling"]
# mem-debug = ["jemallocator/debug"]

# [dev-dependencies]
# tempdir = "0.3"

# [dependencies.jemallocator]
# version = "0.1.9"
# optional = true
# features = ["unprefixed_malloc_on_supported_platforms"]

# [dependencies.jemalloc-sys]
# version = "0.1.8"
# optional = true
# features = ["stats"]

# [dependencies.jemalloc-ctl]
# version = "0.2.0"
# optional = true


